; ModuleID = '/home/carl/AnghaBench/mpv/audio/out/extr_ao_wasapi_utils.c_destroy_enumerator.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/out/extr_ao_wasapi_utils.c_destroy_enumerator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.enumerator = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.enumerator*)* @destroy_enumerator to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @destroy_enumerator(%struct.enumerator* %0) #0 {
  %2 = alloca %struct.enumerator*, align 8
  store %struct.enumerator* %0, %struct.enumerator** %2, align 8
  %3 = load %struct.enumerator*, %struct.enumerator** %2, align 8
  %4 = icmp ne %struct.enumerator* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %17

6:                                                ; preds = %1
  %7 = load %struct.enumerator*, %struct.enumerator** %2, align 8
  %8 = getelementptr inbounds %struct.enumerator, %struct.enumerator* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @SAFE_RELEASE(i32 %9)
  %11 = load %struct.enumerator*, %struct.enumerator** %2, align 8
  %12 = getelementptr inbounds %struct.enumerator, %struct.enumerator* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @SAFE_RELEASE(i32 %13)
  %15 = load %struct.enumerator*, %struct.enumerator** %2, align 8
  %16 = call i32 @talloc_free(%struct.enumerator* %15)
  br label %17

17:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @SAFE_RELEASE(i32) #1

declare dso_local i32 @talloc_free(%struct.enumerator*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
